# translation-porter

./: CMakeLists.txt  LICENSE  README.md  colors_classic.txt  colors_new.txt  languages.txt  main.cpp  multiple.txt
lang_bedrock/: bg_BG.lang  cs_CZ.lang  da_DK.lang  de_DE.lang  el_GR.lang  en_GB.lang  en_US.lang  es_ES.lang  es_MX.lang  fi_FI.lang  fr_CA.lang  fr_FR.lang  hu_HU.lang  id_ID.lang  it_IT.lang  ja_JP.lang  ko_KR.lang  nb_NO.lang  nl_NL.lang  pl_PL.lang  pt_BR.lang  pt_PT.lang  ru_RU.lang  sk_SK.lang  sv_SE.lang  tr_TR.lang  uk_UA.lang  zh_CN.lang  zh_TW.lang
